--- a/Mentoria REST API.ipynb
+++ b/Mentoria REST API.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "dbdd6973",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "f60e4ba9",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'calça': 'Inexistente'}\n"
+      "{'USDBRL': {'code': 'USD', 'codein': 'BRL', 'name': 'Dólar Americano/Real Brasileiro', 'high': '5.4687', 'low': '5.3907', 'varBid': '0.0461', 'pctChange': '0.85', 'bid': '5.4593', 'ask': '5.46', 'timestamp': '1658339067', 'create_date': '2022-07-20 14:44:27'}, 'EURBRL': {'code': 'EUR', 'codein': 'BRL', 'name': 'Euro/Real Brasileiro', 'high': '5.5637', 'low': '5.5084', 'varBid': '0.0159', 'pctChange': '0.29', 'bid': '5.5466', 'ask': '5.5502', 'timestamp': '1658339065', 'create_date': '2022-07-20 14:44:25'}, 'BTCBRL': {'code': 'BTC', 'codein': 'BRL', 'name': 'Bitcoin/Real Brasileiro', 'high': '132.647', 'low': '124.504', 'varBid': '4521', 'pctChange': '3.61', 'bid': '129.743', 'ask': '129.743', 'timestamp': '1658339048', 'create_date': '2022-07-20 14:44:08'}}\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "13f8e5d1",
    "metadata": {},
    "outputs": [
@@ -60,8 +60,8 @@
      "text": [
       " * Serving Flask app \"__main__\" (lazy loading)\n",
       " * Environment: production\n",
-      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
-      "   Use a production WSGI server instead.\n",
+      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
+      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
       " * Debug mode: off\n"
      ]
     },
@@ -70,9 +70,10 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [29/Jul/2021 19:22:09] \"\u001b[33mGET /lirabrabo HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [29/Jul/2021 19:22:13] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [29/Jul/2021 19:22:26] \"\u001b[37mGET /mentolira HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [20/Jul/2022 15:05:13] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Jul/2022 15:05:13] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [20/Jul/2022 15:05:48] \"GET /vendas HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [20/Jul/2022 15:05:56] \"GET /vendas/produto HTTP/1.1\" 404 -\n"
      ]
     }
    ],
@@ -118,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
