--- a/Alertas-Inicial.ipynb
+++ b/Alertas-Inicial.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4e28f9f7",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59c8398d",
    "metadata": {},
    "outputs": [],
@@ -50,34 +50,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "09f60749",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# selecionar um alerta\n"
+    "# selecionar um alerta\n",
+    "navegador.find_element(By.XPATH, '/html/body/div[1]/input').click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "73fadceb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# forma simples\n",
+    "#alerta = navegador.switch_to.alert\n",
     "\n",
-    "\n",
-    "# forma \"completa\"\n"
+    "# forma \"completa\"\n",
+    "from selenium.webdriver.common.alert import Alert\n",
+    "alerta = Alert(navegador)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "30537925",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ALguns comandos que a gente pode fazer com o alerta:\n",
+    "alerta.accept()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,11 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3594b247",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# selecionar um alerta\n",
+    "navegador.find_element(By.XPATH, '/html/body/div[2]/input').click()"
+   ]
   },
   {
    "cell_type": "code",
@@ -102,11 +111,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "alerta = Alert(navegador)\n",
     "# aceitar\n",
+    "alerta.accept()\n",
     "\n",
-    "\n",
-    "\n",
-    "# cancelar\n"
+    "# cancelar\n",
+    "alerta.dismiss()"
    ]
   },
   {
@@ -119,11 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "84f67d69",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quer confirmar a emissão da NF?\n"
+     ]
+    }
+   ],
+   "source": [
+    "alerta = Alert(navegador)\n",
+    "texto = alerta.text\n",
+    "print(texto)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,27 +157,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "79998e3f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# selecionar um alerta\n",
+    "navegador.find_element(By.XPATH, '/html/body/div[3]/button').click()\n",
+    "alerta = Alert(navegador)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5eebaa32",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "alerta.send_keys(\"234234324243\") #Aqui parece que não preencheu, mas preencheu. É só um bugzinho, mas n atrapalha o código"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "69c2a6f7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "alerta.accept()"
+   ]
   },
   {
    "cell_type": "code",
